--- a/client/src/controller/navbar/Navbar.css
+++ b/client/src/controller/navbar/Navbar.css
@@ -191,18 +191,20 @@
     position: absolute;
     right: 0;
     background-color: #aca3a3;
-    height: 158px;
+    /* height: 158px; */
+    max-height: 158px;
     min-width: 190px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
     border-radius: 8px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
+    text-align: center;
     display: block;
     transition: background-color 0.3s ease-in-out;
 }
