--- a/client/src/controller/profile/profile.css
+++ b/client/src/controller/profile/profile.css
@@ -14,7 +14,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  width: 90%; /* Full width */
+  width: 100%; /* Full width */
   max-width: 1200px; /* Adjust as needed */
 }
 
@@ -36,7 +36,8 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  width: 25%; /* Adjust width as needed */
+  /* width: 25%;  */
+  width: 20%; 
   animation: fadeIn 0.5s ease-in-out; /* Add fade-in animation */
 }
 
@@ -106,7 +107,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 75%; /* Adjust width as needed */
+  width: 80%; /* Adjust width as needed */
 }
 
 /* Profile Section */
