--- a/client/src/controller/navbar/Navbar.css
+++ b/client/src/controller/navbar/Navbar.css
@@ -180,6 +180,7 @@
     position: relative;
     display: inline-block;
     cursor: pointer;
+    z-index: 1000;
 }
 
 .user-profile:hover .dropdown-content {
